api fix now functional, fix backend to fronted
